# ChangeLog for media-gfx/aafigure
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  09 Apr 2012; James Rowe <jnrowe@gmail.com> aafigure-0.5-r2.ebuild:
  Fix broken pattern matching with recent dodoc changes.

  09 Apr 2012; James Rowe <jnrowe@gmail.com> aafigure-0.5-r2.ebuild:
  Use distutils.eclass via jnrowe-pypi.

  18 Mar 2012; James Rowe <jnrowe@gmail.com> aafigure-0.5-r2.ebuild:
  Switched to EAPI4.

  14 Mar 2012; James Rowe <jnrowe@gmail.com> aafigure-0.5-r2.ebuild:
  Use ${PN} in ${HOMEPAGE}.

  14 Nov 2011; James Rowe <jnrowe@gmail.com> metadata.xml:
  Removed redundant herd info.

  14 May 2011; James Rowe <jnrowe@gmail.com> -aafigure-0.5-r1.ebuild,
  aafigure-0.5-r2.ebuild:
  Keyworded x86.

  14 May 2011; James Rowe <jnrowe@gmail.com> aafigure-0.5-r2.ebuild:
  Keyworded amd64.

*aafigure-0.5-r2 (14 Apr 2011)

  14 Apr 2011; James Rowe <jnrowe@gmail.com> +aafigure-0.5-r2.ebuild:
  Support multi-ABI python [333].

  12 Jan 2011; James Rowe <jnrowe@gmail.com> +watch:
  Added watch file for package updates.

  06 Oct 2010; James Rowe <jnrowe@gmail.com> metadata.xml:
  Added remote-id to metadata.

  06 Oct 2010; James Rowe <jnrowe@gmail.com> aafigure-0.5-r1.ebuild:
  Fixed dependency inheritance.

  20 Jul 2010; James Rowe <jnrowe@gmail.com> aafigure-0.5-r1.ebuild:
  Switch to eutils shopt wrapper.

  07 Jun 2010; James Rowe <jnrowe@gmail.com> -aafigure-0.5.ebuild,
  aafigure-0.5-r1.ebuild:
  Keyworded x86.

  07 Jun 2010; James Rowe <jnrowe@gmail.com> aafigure-0.5-r1.ebuild:
  Keyworded amd64.

*aafigure-0.5-r1 (08 May 2010)

  08 May 2010; James Rowe <jnrowe@gmail.com> +aafigure-0.5-r1.ebuild:
  PDF support via reportlab is optional.

  25 Apr 2010; James Rowe <jnrowe@gmail.com> -aafigure-0.4.ebuild,
  aafigure-0.5.ebuild:
  Keyworded x86.

  25 Apr 2010; James Rowe <jnrowe@gmail.com> aafigure-0.5.ebuild:
  Keyworded amd64.

*aafigure-0.5 (25 Mar 2010)
