@@ -1,13 +1,14 @@
-DEFINED_PHASES=compile install postinst postrm prepare setup
-DEPEND=doc? ( media-gfx/sphinxcontrib-aafig ) dev-python/imaging docutils? ( >=dev-python/docutils-0.5 dev-python/setuptools ) pdf? ( dev-python/reportlab ) =dev-lang/python-2*
+DEFINED_PHASES=compile configure install prepare test unpack
+DEPEND=doc? ( media-gfx/sphinxcontrib-aafig ) dev-python/imaging docutils? ( >=dev-python/docutils-0.5 dev-python/setuptools ) pdf? ( dev-python/reportlab ) !<sys-apps/portage-2.1.10.58 python_targets_python2_5? ( dev-lang/python:2.5 ) python_targets_python2_6? ( dev-lang/python:2.6 ) python_targets_python2_7? ( dev-lang/python:2.7 )
 DESCRIPTION=ASCII art figures parsed and output as SVG, PNG, and more
 EAPI=4
 HOMEPAGE=https://launchpad.net/aafigure
-IUSE=doc docutils examples pdf
+IUSE=doc docutils examples pdf python_targets_python2_5 python_targets_python2_6 python_targets_python2_7
 KEYWORDS=amd64 x86
 LICENSE=BSD
-RDEPEND=dev-python/imaging docutils? ( >=dev-python/docutils-0.5 dev-python/setuptools ) pdf? ( dev-python/reportlab ) =dev-lang/python-2*
+RDEPEND=dev-python/imaging docutils? ( >=dev-python/docutils-0.5 dev-python/setuptools ) pdf? ( dev-python/reportlab ) python_targets_python2_5? ( dev-lang/python:2.5 ) python_targets_python2_6? ( dev-lang/python:2.6 ) python_targets_python2_7? ( dev-lang/python:2.7 )
+REQUIRED_USE=|| ( python_targets_python2_5 python_targets_python2_6 python_targets_python2_7 )
 SLOT=0
 SRC_URI=mirror://pypi/a/aafigure/aafigure-0.5.tar.gz
-_eclasses_=distutils	15ae23f6f8219a009bfcfff7724fe727	eutils	a95b1bf9d854485ca6fdbb47df2975aa	jnrowe-pypi	9789fd5aecac33fd48a8bcd9d1dc98e0	multilib	5f4ad6cf85e365e8f0c6050ddd21659e	python	36d7e2b7aa4dce62364c72eec96610cf	toolchain-funcs	f71b9936acc911ed1cc84557d3b5c2b3	user	32a09e82e2f592bf88ad2fd08525166e
-_md5_=b62c4c0e1b2a4171888ff9b88141dc5d
+_eclasses_=base	5f35078c26d6c60556d5c8a2feb4f84f	eutils	a95b1bf9d854485ca6fdbb47df2975aa	jnrowe-pypi	9789fd5aecac33fd48a8bcd9d1dc98e0	multilib	5f4ad6cf85e365e8f0c6050ddd21659e	python-distutils-ng	9649998e4ceeb56a6745cc819dbafcb6	toolchain-funcs	f71b9936acc911ed1cc84557d3b5c2b3	user	32a09e82e2f592bf88ad2fd08525166e
+_md5_=65af4b5837cbbd294bf92d0fdccf08ff
