@@ -2,6 +2,9 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  29 May 2012; James Rowe <jnrowe@gmail.com> aafigure-0.5-r2.ebuild:
+  Switched to python-distutils-ng eclass.
+
   09 Apr 2012; James Rowe <jnrowe@gmail.com> aafigure-0.5-r2.ebuild:
   Fix broken pattern matching with recent dodoc changes.
 
